@@ -1,3 +1,3 @@
-PKG_CHECK_MODULES(GUILE_GLIB, guile-gnome-glib-$API_VERSION)
+PKG_CHECK_MODULES(GUILE_GLIB, guile-gnome-glib-$API_VERSION >= 2.15.90)
 AC_SUBST(GUILE_GLIB_CFLAGS)
 AC_SUBST(GUILE_GLIB_LIBS)
