@@ -1,3 +1,10 @@
+2007-05-04  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/gw/gstreamer-support.c (scm_init_gstreamer): Register
+	GstMiniObject GValue wrappers.
+
+	* glib-checks.ac: Make sure we have new new guile-gnome-glib-0.
+
 2007-02-02  Andy Wingo  <wingo@pobox.com>
 
 	* gnome/gw/gstreamer-support.c (scm_init_gstreamer): Don't set the
